--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.5",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
@@ -64,6 +65,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
